--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <!-- 
 <app-display-list></app-display-list>  -->
-<router-outlet></router-outlet>
-<!-- <app-edit-product></app-edit-product> -->
 
+<!-- <app-edit-product></app-edit-product> -->
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-admin-homepage></app-admin-homepage> -->
+
+<app-main></app-main>
+<!-- <app-display-list></app-display-list> -->
+<!-- <app-header></app-header>
+<app-myorders></app-myorders> -->
