--- a/src/app/frontendComponenets/main/main.component.html
+++ b/src/app/frontendComponenets/main/main.component.html
@@ -1,19 +1,17 @@
 <app-header></app-header>
 
-<app-carousel></app-carousel>
+
+
+<router-outlet></router-outlet>
 
 
 
-<app-data-list></app-data-list>
-<!-- *ngIf="datadetail" -->
-<app-data-detail [detail]="detailcont" *ngIf="datadetail" (closedetail)="closecomp()"></app-data-detail>
 
 
-<!-- 
-<app-footer></app-footer> -->
+<app-footer></app-footer>
 
 
-<!-- <div class="btn btn-warning animationeffect" [ngClass]="{'animation fadeInDown':animation}" *ngIf="value"(click)="gototop()"> <span class="material-icons">
+<div class="btn btn-warning animationeffect" [ngClass]="{'animation fadeInDown':animation}" *ngIf="value"(click)="gototop()"> <span class="material-icons">
   keyboard_arrow_up
-  </span> </div> -->
+  </span> </div>
 
