--- a/src/app/backendComponents/display-list/display-list.component.html
+++ b/src/app/backendComponents/display-list/display-list.component.html
@@ -17,11 +17,11 @@
                     </div>
                     <div class="col-md-6">
                        <h5>Product name : {{ item.name}}</h5>
-                       <h6>Product price : {{ item.estimatedprice }}</h6> 
+                       <h6>Product price : {{ item.id }}</h6> 
                        <h6> Description : {{ item.description}}</h6>
                        <h6> Cloth type : {{ item.clothtype }}</h6> 
                        <h6> Color : {{ item.color }}</h6> 
-                        <button class="btn btn-primary" style="margin-left: 20px;" (click)="editproduct(item.id,item.type)">Update</button>
+                        <button class="btn btn-primary" style="margin-left: 20px;" (click)="editproduct(item)">Update</button>
                         <button class="btn btn-warning" style="margin-left: 120px;">Delete</button>
                    </div>
                 </div>
