--- a/src/app/frontendComponenets/data-detail/data-detail.component.css
+++ b/src/app/frontendComponenets/data-detail/data-detail.component.css
@@ -11,15 +11,16 @@
    
 }
 .overalldiv{
-   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-   /* background-color: lightgray; */
-  /* padding-top: 64px; */
+
   padding: 55px;
-  /* font-family: Roboto,Arial,sans-serif; */
   position: relative;
   animation: animateleft 0.6s;
 }
 
+.imagediv
+{
+  margin-top: 20px;
+}
 
 .animateleft{
   position: relative;
