--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-admin-homepage></app-admin-homepage> -->
 
-<app-main></app-main>
+<!-- <app-main></app-main> -->
 <!-- <app-display-list></app-display-list> -->
 <!-- <app-header></app-header>
 <app-myorders></app-myorders> -->
+<app-register-user style="margin-top: 64px;"></app-register-user>
