--- a/src/app/frontendComponenets/register-user/register-user.component.html
+++ b/src/app/frontendComponenets/register-user/register-user.component.html
@@ -1,16 +1,14 @@
 <div class="container">
 
-   <div class="row">
-    <div class="col-md-6">
+   <div class="row" >
+    <div class="col-md-12">
 
-        <form  [formGroup]="postForm" (ngSubmit)="createPost()">
+        <form  [formGroup]="postForm" >
 
-          <span *ngIf="!postForm.controls.name.invalid"
-            >Please enter a username</span>
-
+        
             <div class="form-group">
               <label for="exampleInputEmail1">User name</label>
-              <input type="email" class="form-control"  placeholder="Enter email" formControlName="name">
+              <input type="email" class="form-control"  placeholder="Enter email" formControlName="username">
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
@@ -18,25 +16,22 @@
                </div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Contact number</label>
-                <input type="email" class="form-control"  placeholder="Enter number" formControlName="number">
+                <input type="email" class="form-control"  placeholder="Enter number" formControlName="contactnumber">
               </div>
+             
+      
+            <div ngbDropdown class="d-inline-block">
+              <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Gender</button>
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+                <button ngbDropdownItem *ngFor="let item of gender" (click)="selectedgender(item)">{{ item }}</button>
+                
+              </div> </div>
+             
+
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" formControlName="password">
             </div>
-
-            <div class="form-group">
-                <div ngbDropdown class="d-inline-block">
-                  <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>Gender</button>
-                  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                    <button ngbDropdownItem>Male</button>
-                    <button ngbDropdownItem>Female</button>
-                    <button ngbDropdownItem>Others</button>
-                  </div>
-                </div>
-            </div>
-             
-
 
             <div class="form-group">
                 <label for="exampleInputPassword1">Re enter password</label>
@@ -46,7 +41,7 @@
               
 
            
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" (click)="onSubmit()">Submit</button>
           </form>
           
        </div>
