--- a/src/app/backendComponents/admin-homepage/admin-homepage.component.css
+++ b/src/app/backendComponents/admin-homepage/admin-homepage.component.css
@@ -1,42 +1,54 @@
-.side-nav {
-    /* overflow: auto; */
-    /* max-height: 320px; */
-    position: fixed;
-}
-.side-nav__menu {
-    margin: 0;
-    padding: 0;
-}
-.side-nav__menu-content {
-    display: block;
-    color: #337ab7;
-    font-size: 26px;
-    line-height: 24px;
-    text-decoration: none;
-    /* border-left: 3px solid #e5e5e5; */
-    padding: 30px 90px;
-    /* width: 320px; */
-    cursor: pointer;
-}
-
-.side-nav__head
-{
-    padding: 30px 90px;
-    display: block;
-    color: #337ab7;
-    font-size: 26px;
-    line-height: 24px;
-}
-
-
-.side-nav__menu-content:hover {
-    border-right: 3px solid #2a82e5;
-    /* border-bottom: 3px solid #2a82e5; */
-    color: #000;
-}
 
 
 .adminpage
 {
-    margin-top: 64px;
+    margin-top: 140px;
+}
+
+.top-left-row
+{
+    border: 2px solid lightseagreen;
+    padding: 30px 50px;
+    display: block;
+    color: whitesmoke;
+    cursor: pointer;
+    background-image: linear-gradient(to right, orange, rgba(255,0,0,1));
+}
+
+
+.top-right-row
+{
+    margin-right: 30px;
+    border: 2px solid lightseagreen;
+    padding: 30px 50px;
+    display: block;
+    color: whitesmoke;
+    cursor: pointer;
+    background-image: linear-gradient(to right, blue, pink);
+}
+
+
+.admin-block
+{
+    background-color: #7f8c8d ;
+}
+
+
+.botton-left-row
+{
+    margin-right: 30px;
+    border: 2px solid lightseagreen;
+    padding: 30px 50px;
+    display: block;
+    color: whitesmoke;
+    cursor: pointer;
+    background-image: linear-gradient(to right, green, grey);
+}
+
+
+.list-style
+{
+    text-decoration: none;
+    padding: 5px 15px;
+    cursor: pointer;
 }
