--- a/src/app/backendComponents/admin-homepage/admin-homepage.component.html
+++ b/src/app/backendComponents/admin-homepage/admin-homepage.component.html
@@ -1,36 +1,115 @@
 
 <app-adminheader></app-adminheader>
 
-   <div class="container-fluid adminpage">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="side-nav d-none d-md-block" (scroll)="onScroll($event)">
-                    <ul class="side-nav__menu">
-                        <li class="side-nav__head"><a class="" >Products</a></li>
 
-                    <li class="side-nav__menu-items" [routerLinkActive]="['active']"
-                    (click)="onNavClick('men')">
-                    <a class="side-nav__menu-content" >Men</a>
-                    </li>
-                    <li class="side-nav__menu-items" [routerLinkActive]="['active']"
-                    (click)="onNavClick('womens')">
-                    <a class="side-nav__menu-content" >Women</a>
-                    </li>
-                    <li class="side-nav__menu-items" [routerLinkActive]="['active']"
-                    (click)="onNavClick('kid')">
-                    <a class="side-nav__menu-content" >Kids</a>
-                    </li>
+<div class="adminpage">
+  <div class="container">
+      <div class="row ">
+          <div class="col-md-6">
+
+           <div class="top-left-row" (click)="navigateToOrderList()">
+
+            <div class="row ">
+                <div class="col-md-6">
+                    <div>Orders</div>
+                    <i class="fa fa-shopping-cart" aria-hidden="true" style="margin-top: 15px; font-size: 40px;"></i>
+                </div>
+                <div class="col-md-6">
+                    <div style="margin-top: 40px;"> <h4>{{ productOrders.length}}</h4> </div>
+                </div>
+                </div>
+
+           </div>
 
 
-                    <li class="side-nav__head"><a style="cursor: pointer;"  (click)="navigateToOrderOrAddItem('additem')">Add item</a></li>
-                    <li class="side-nav__head"><a style="cursor: pointer;"  (click)="navigateToOrderOrAddItem('viewAllOrders')">orders</a></li>
-                </ul>
-                    </div>
-            </div>
-            <div class="col-md-9">
-                <app-display-list></app-display-list>
+          </div>
+          <div class="col-md-6" >
+            <div class="top-right-row" (click)="navigateToCustomerList()">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>Users</div>
+                    <i class="fa fa-users" aria-hidden="true" style="margin-top: 15px; font-size: 40px;"></i>
+                </div>
+                <div class="col-md-6">
+                    <div style="margin-top: 40px;">  <h4>{{ userDatas.length}} </h4> </div>
+                </div>
             </div>
         </div>
+          </div>
+      </div>
+
+
+      <div class="row" style="margin-top: 60px;">
+
+
+       
+        <div class="col-md-4">
+
+            <div class="botton-left-row" (click)="navigateToOrderOrAddItem('additem')">
+               
+                        <div>Upload product</div>
+                        <i class="fa fa-upload" aria-hidden="true" style="margin-top: 15px; font-size: 40px;"></i>
+                   
+            </div>
+
+
+        </div>
+
+        <div class="col-md-4">
+
+            <div> <h4> Products</h4> </div>
+
+            <ul style="list-style-type: none; margin-top: 15px;">
+               
+
+            <li  [routerLinkActive]="['active']"
+            (click)="onNavClick('men')">
+            <a class="list-style"  style="display: flex; justify-content: flex-start;">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <h5 style="margin-left: 20px;">Men List</h5>    
+            </a>
+            </li>
+            <li  [routerLinkActive]="['active']"
+            (click)="onNavClick('womens')">
+            <a class="list-style" style="display: flex; justify-content: flex-start;">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <h5 style="margin-left: 20px;">Women List</h5>    
+            </a>
+            </li>
+            <li  [routerLinkActive]="['active']"
+            (click)="onNavClick('kid')">
+            <a class="list-style" style="display: flex; justify-content: flex-start;">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <h5 style="margin-left: 20px;">Kids List</h5>      
+            </a>
+            </li>
+            </ul>
+
+
+        </div>
+
+        <div class="col-md-4" >
+
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Offer Description</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+
+              <button
+              type="submit"
+              style="margin-top: 20px; margin-left: 260px;"
+              class="btn btn-primary"
+              >
+              Save
+            </button>
+
+
+        </div>
+
+
     </div>
 
-  
+
+
+  </div>
+  </div>
