--- a/src/app/frontendComponenets/data-detail/data-detail.component.html
+++ b/src/app/frontendComponenets/data-detail/data-detail.component.html
@@ -1,7 +1,4 @@
-
-
-
- <ng-template #content let-modal >
+<ng-template #content let-modal >
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Product detail</h4>
     <button type="button" class="close" aria-label="Close" (click)="detailclose()" style="outline: none;">
@@ -16,19 +13,19 @@
             <div class="col-md-6">
                 <div class="imagediv">
                     <img [src]="data?.image" class="image">
-    
-                </div>
+                    </div>
             </div>
            
               <div class="col-md-6" *ngIf="!enableform">
-                <!-- <h4 style="color: gray;">Try this</h4> -->
+             
                 <h5 style="color: blue; margin-top: 10px;"> {{ data?.name }}</h5>
                 <h5> price :  {{ data?.estimatedprice }}  <span  style="margin-left: 10px; color: blue; font-size: small;"><s>{{ data?.price }}</s></span></h5> <span style="color: blue">59% off</span> 
                 <h5> Description : {{ data?.description }} </h5>
                 <h5> Model :  {{data?.clothtype}} </h5>
                 <h5> Color :  {{ data?.color }} </h5> 
                 <h5 style="color: green">Special price ends in 
-                  <span id="timer">  </span></h5>  
+                  <!-- <span id="timer">  </span> -->
+                </h5>  
              <h5>Free home delivery for bulk orders</h5>
           <button class="btn btn-warning" (click)="order()"> Place order </button>   
           </div>
@@ -42,12 +39,8 @@
          
             <h5 style="color: blue; margin-top: 10px;"> {{ data?.name }}</h5>
             <h5> price :  {{ data?.estimatedprice }}  <span  style="margin-left: 10px; color: blue; font-size: small;"><s>{{ data?.price }}</s></span></h5> <span style="color: blue">59% off</span> 
-           
-
-           
+                    
                    <form  [formGroup]="orderForm" >
-           
-                   
                          <div class="form-group">
                            <label for="exampleInputEmail1">Enter mobile number</label>
                            <input type="email" class="form-control"  placeholder="Enter number" formControlName="contactNumber">
@@ -66,32 +59,16 @@
                             
                           </div> </div>
                            <button type="submit" class="btn btn-primary d-inline-block " style="margin-left: 30px;" (click)="onSaveOrder()">Submit</button>
-                      
-                        
-           
-                    
-                     </form>
-
                      
-                 
+                     </form>
       </div>
-
-
-      
-    
     </div>
-  
   </div>
 </div>
-
-
 
   <div *ngIf="orderbtn" style="clear: fix;" class="animateleft">   
    <app-orderinstruction></app-orderinstruction> 
        </div>
-    
-
-
 </div>
 
 
