--- a/src/app/frontendComponenets/footer/footer.component.html
+++ b/src/app/frontendComponenets/footer/footer.component.html
@@ -1,7 +1,63 @@
-<div style="width: 100%;">
+<!-- <div style="width: 100%;">
     <img src="../assets/images/print.jpg" style="width: 100%;">
-</div>
+</div> -->
+<div style="background-color: orange;">
+    <div class="container">
+ 
+  
+    <div class="row" style="background-color:orange;">
+  
+        <div class="col-md-6">
+       
+           <div class="desktop-column" >
 
+            <h4 style="margin: 20px 0px;">For orders contact </h4>
+            <ul class="list-group" >
+                
+                <li class="list-group-item-order" >
+                   
+                   <i class="material-icons" >email</i>
+                   <p  style="display:inline-block; margin-left: 10px;">nsrgarments@hotmail.com</p>
+
+               </li>
+
+                <li class="list-group-item-order">
+                   <i class="material-icons" >phone</i>
+                   <p  style="display:inline-block; margin-left: 10px;">9787038130</p>
+               </li>  
+               
+               <li class="list-group-item-order">
+                <i class="material-icons" >location_on</i>
+                <p  style="display:inline-block; margin-left: 10px;">no 16 , KG nagar </p>
+                <p  style="margin-left: 30px; margin-top: -20px;">Tiruppur. </p>
+            </li>  
+
+            </ul>
+
+           </div>
+     
+         </div>
+
+          <div class="col-md-6">
+
+            <div class="desktop-column">
+
+            <h4 style="margin: 20px 0px;">Achievements</h4>
+
+            <p style=" margin-top: 20px;" class="ach-text">
+                Established in 2012 , NSR Garments has made a name for itself in the<br> list of top suppliers of Ladies Legging in India.<br>
+                 The supplier company is located in Tirupur, Tamil Nadu and is one of<br> the leading sellers of listed products.<br>
+            </p>
+
+            <p style=" margin-top: 20px; " class="ach-text">  NSR Garments is listed in Trade India's list of verified sellers offering supreme quality of Skin Friendly Ladies Cotton Leggings etc. Buy Ladies Legging in bulk from us for the best quality products and service.
+         We also provide products  and customization  on tshirt  on order based.We provide products for kids too.  </p>
+
+          </div>
+
+     </div>
+
+    </div>
+</div>
 
 
 <div class="container-fluid footerdiv ">
@@ -9,7 +65,7 @@
   
     <div class="row" style="margin-top: 30px;">
   
-          <div class="col-md-3">
+          <div class="col-md-4">
               <span>MENS</span>
               <ul class="list-group" style="margin-top:15px">
                   <li class="list-group-item list">Tracks</li>
@@ -20,7 +76,7 @@
               </ul>
           </div>
   
-          <div class="col-md-3">
+          <div class="col-md-4">
              <span>WOMENS</span>
             <ul class="list-group" style="margin-top:15px">
                 <li class="list-group-item list">Ankle length leggings</li>
@@ -32,7 +88,7 @@
         </div>
   
        
-      <div class="col-md-3">
+      <div class="col-md-4">
           <span>KIDS</span>
           <ul class="list-group" style="margin-top:15px">
               <li class="list-group-item list">Infant baby  girl dress</li>
@@ -43,28 +99,17 @@
           </ul>
       </div>
   
-      <div class="col-md-3">
-       
-         <h4>For orders contact </h4>
-              <ul class="list-group" >
-                  
-                  <li class="list-group-item list" style="  background-color: black; color: #00BFFF; display: flex; "><i class="material-icons" >email</i><p  style="display:inline-block; margin-left: 10px;">nsrgarments@hotmail.com</p></li>
-                  <li class="list-group-item list" style="  background-color: black; color: #00BFFF; display: flex;"><i class="material-icons" >phone</i><p  style="display:inline-block; margin-left: 10px;">9787038130</p></li>
-                 
-              </ul>
-  
-      </div>
+     
     </div>
   <hr style="background-color: #00BFFF;">
-    <div class="row" style="padding: 20px;">
+    <!-- <div class="row" style="padding: 20px;">
       <div class="colm-xs-12">
           <span>ABOUT US</span> 
         <p style="margin-top:15px">
-      Established in 2012 , NSR Garments has made a name for itself in the list of top suppliers of Ladies Legging in India. The supplier company is located in Tirupur, Tamil Nadu and is one of the leading sellers of listed products.
-      <br>  NSR Garments is listed in Trade India's list of verified sellers offering supreme quality of Skin Friendly Ladies Cotton Leggings etc. Buy Ladies Legging in bulk from us for the best quality products and service.
-         We also provide products  and customization  on tshirt  on order based.We provide products for kids too.  </p>
+     
+      
       </div>
-  </div>
+  </div> -->
   
   </div>
-  
+</div>
